# Multimodal-Search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  embedder.py  knn.py  nginx.conf  pyproject.toml
scripts/: clip_embed.py  dino_embed.py  siglip_embed.py
static/: app.js  index.html  style.css
